# entanglement_problem

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
configs/: corpus.yaml  subcapabilities.yaml  substrate_sources.yaml  vendor_hosts.yaml
data/: corpus_manifest.yaml
docs/: CORPUS_CARD.md  METHODOLOGY.md  POD_RUN.md
reports/: cross_bucket_contamination.md  defense_composition.md  defensive_bucket_review.md  entanglement_profile.md  entanglement_unlearning_tax.md  pca_confound_check.md  prune_preview.md  relearn_recovery.md  representation_analysis.md  separability_pilot.md  unlearning_smoke_shakedown.md  wmdp_bio_vs_cyber_geometry.md  wmdp_cyber_geometry_baseline.md
scripts/: circuit_breakers.py  diag_entanglement_tax.py  diag_pca_confound.py  diag_prune_preview.py  diag_relearn.py  diag_source_tsne.py  diag_wmdp_bio_vs_cyber.py  diag_wmdp_geometry.py  eval_suite.py  extract_hidden_states.py  extract_hidden_states_flash.py  grade_saq.py  gradient_align.py  npo.py  pod_setup.sh  prep_wikitext_units.py  prep_wmdp_units.py  relearn.py  run_entanglement_flash.py  run_entanglement_sweep.py  run_point.py  run_relearn.py  run_relearn_sweep.py  run_smoke_sweep.py  unlearn_rmu.py
tests/: test_analysis_units.py  test_cleanup.py  test_corpus_audit.py  test_corpus_defensive.py  test_corpus_offensive.py  test_corpus_validate.py  test_eval_harness.py  test_mcq.py  test_normalize.py  test_procedures.py  test_quality.py  test_representation_analysis.py  test_retrieve.py  test_saq.py  test_scrape.py  test_separability.py  test_subcapabilities.py  test_substrate_fetch.py  (+2 more)
(+77 files in other folders)
